--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script
+      id="react-dotenv"
+      src="https://ihorkoi.github.io/react-weather-app/env.js"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
