--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <title>Weather Wise</title>
     <script
       id="react-dotenv"
-      src="https://ihorkoi.github.io/weather-wize/env.js"
+      src="https://ihorkoi.github.io/weather-wise/env.js"
     ></script>
   </head>
   <body>
